--- a/salaryPredictor.ipynb
+++ b/salaryPredictor.ipynb
@@ -2,6 +2,565 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import sklearn\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.metrics import mean_squared_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datadf = pd.read_csv(\"ai-jobs-net-salaries.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>work_year</th>\n",
+       "      <th>experience_level</th>\n",
+       "      <th>employment_type</th>\n",
+       "      <th>job_title</th>\n",
+       "      <th>salary</th>\n",
+       "      <th>salary_currency</th>\n",
+       "      <th>salary_in_usd</th>\n",
+       "      <th>employee_residence</th>\n",
+       "      <th>remote_ratio</th>\n",
+       "      <th>company_location</th>\n",
+       "      <th>company_size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>MI</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>Research Engineer</td>\n",
+       "      <td>55000</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>57894</td>\n",
+       "      <td>BE</td>\n",
+       "      <td>50</td>\n",
+       "      <td>BE</td>\n",
+       "      <td>L</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>EN</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>Data Analyst</td>\n",
+       "      <td>147000</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>147000</td>\n",
+       "      <td>US</td>\n",
+       "      <td>0</td>\n",
+       "      <td>US</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>EN</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>Data Analyst</td>\n",
+       "      <td>60900</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>60900</td>\n",
+       "      <td>US</td>\n",
+       "      <td>0</td>\n",
+       "      <td>US</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>SE</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>Software Engineer</td>\n",
+       "      <td>303500</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>303500</td>\n",
+       "      <td>US</td>\n",
+       "      <td>0</td>\n",
+       "      <td>US</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>SE</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>Software Engineer</td>\n",
+       "      <td>159800</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>159800</td>\n",
+       "      <td>US</td>\n",
+       "      <td>0</td>\n",
+       "      <td>US</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>SE</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>Developer</td>\n",
+       "      <td>135000</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>135000</td>\n",
+       "      <td>US</td>\n",
+       "      <td>0</td>\n",
+       "      <td>US</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>SE</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>Developer</td>\n",
+       "      <td>95000</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>95000</td>\n",
+       "      <td>US</td>\n",
+       "      <td>0</td>\n",
+       "      <td>US</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>SE</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>Engineer</td>\n",
+       "      <td>300000</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>300000</td>\n",
+       "      <td>US</td>\n",
+       "      <td>0</td>\n",
+       "      <td>US</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>SE</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>Engineer</td>\n",
+       "      <td>70000</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>70000</td>\n",
+       "      <td>US</td>\n",
+       "      <td>0</td>\n",
+       "      <td>US</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>MI</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>Machine Learning Engineer</td>\n",
+       "      <td>355000</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>355000</td>\n",
+       "      <td>US</td>\n",
+       "      <td>0</td>\n",
+       "      <td>US</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   work_year experience_level employment_type                  job_title  \\\n",
+       "0       2025               MI              FT          Research Engineer   \n",
+       "1       2025               EN              FT               Data Analyst   \n",
+       "2       2025               EN              FT               Data Analyst   \n",
+       "3       2025               SE              FT          Software Engineer   \n",
+       "4       2025               SE              FT          Software Engineer   \n",
+       "5       2025               SE              FT                  Developer   \n",
+       "6       2025               SE              FT                  Developer   \n",
+       "7       2025               SE              FT                   Engineer   \n",
+       "8       2025               SE              FT                   Engineer   \n",
+       "9       2025               MI              FT  Machine Learning Engineer   \n",
+       "\n",
+       "   salary salary_currency  salary_in_usd employee_residence  remote_ratio  \\\n",
+       "0   55000             EUR          57894                 BE            50   \n",
+       "1  147000             USD         147000                 US             0   \n",
+       "2   60900             USD          60900                 US             0   \n",
+       "3  303500             USD         303500                 US             0   \n",
+       "4  159800             USD         159800                 US             0   \n",
+       "5  135000             USD         135000                 US             0   \n",
+       "6   95000             USD          95000                 US             0   \n",
+       "7  300000             USD         300000                 US             0   \n",
+       "8   70000             USD          70000                 US             0   \n",
+       "9  355000             USD         355000                 US             0   \n",
+       "\n",
+       "  company_location company_size  \n",
+       "0               BE            L  \n",
+       "1               US            M  \n",
+       "2               US            M  \n",
+       "3               US            M  \n",
+       "4               US            M  \n",
+       "5               US            M  \n",
+       "6               US            M  \n",
+       "7               US            M  \n",
+       "8               US            M  \n",
+       "9               US            M  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datadf.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['work_year', 'experience_level', 'employment_type', 'job_title',\n",
+       "       'salary', 'salary_currency', 'salary_in_usd', 'employee_residence',\n",
+       "       'remote_ratio', 'company_location', 'company_size'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datadf.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#replacing the values to expand for better understanding\n",
+    "datadf['experience_level'] = datadf['experience_level'].replace({\n",
+    "    'EN': 'Entry-level',\n",
+    "    'MI': 'Mid-level',\n",
+    "    'SE': 'Senior-level',\n",
+    "    'EX': 'Executive-level'\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Mid-level', 'Entry-level', 'Senior-level', 'Executive-level'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datadf['experience_level'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['FT', 'CT', 'PT', 'FL'], dtype=object)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "datadf['employment_type'].unique()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#replacing the values to expand for better understanding\n",
+    "datadf['employment_type'] = datadf['employment_type'].replace({\n",
+    "    'FT': 'Full-Time',\n",
+    "    'CT': 'Contract',\n",
+    "    'PT': 'Part-Time',\n",
+    "    'FL': 'Freelance'\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Full-Time', 'Contract', 'Part-Time', 'Freelance'], dtype=object)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datadf['employment_type'].unique()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Mid-level', 'Entry-level', 'Senior-level', 'Executive-level'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datadf['experience_level'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 50,   0, 100], dtype=int64)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "datadf['remote_ratio'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>work_year</th>\n",
+       "      <th>experience_level</th>\n",
+       "      <th>employment_type</th>\n",
+       "      <th>job_title</th>\n",
+       "      <th>salary</th>\n",
+       "      <th>salary_currency</th>\n",
+       "      <th>salary_in_usd</th>\n",
+       "      <th>employee_residence</th>\n",
+       "      <th>remote_ratio</th>\n",
+       "      <th>company_location</th>\n",
+       "      <th>company_size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>Mid-level</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>Research Engineer</td>\n",
+       "      <td>55000</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>57894</td>\n",
+       "      <td>BE</td>\n",
+       "      <td>50</td>\n",
+       "      <td>BE</td>\n",
+       "      <td>L</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>Entry-level</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>Data Analyst</td>\n",
+       "      <td>147000</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>147000</td>\n",
+       "      <td>US</td>\n",
+       "      <td>0</td>\n",
+       "      <td>US</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>Entry-level</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>Data Analyst</td>\n",
+       "      <td>60900</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>60900</td>\n",
+       "      <td>US</td>\n",
+       "      <td>0</td>\n",
+       "      <td>US</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>Senior-level</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>Software Engineer</td>\n",
+       "      <td>303500</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>303500</td>\n",
+       "      <td>US</td>\n",
+       "      <td>0</td>\n",
+       "      <td>US</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>Senior-level</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>Software Engineer</td>\n",
+       "      <td>159800</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>159800</td>\n",
+       "      <td>US</td>\n",
+       "      <td>0</td>\n",
+       "      <td>US</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   work_year experience_level employment_type          job_title  salary  \\\n",
+       "0       2025        Mid-level              FT  Research Engineer   55000   \n",
+       "1       2025      Entry-level              FT       Data Analyst  147000   \n",
+       "2       2025      Entry-level              FT       Data Analyst   60900   \n",
+       "3       2025     Senior-level              FT  Software Engineer  303500   \n",
+       "4       2025     Senior-level              FT  Software Engineer  159800   \n",
+       "\n",
+       "  salary_currency  salary_in_usd employee_residence  remote_ratio  \\\n",
+       "0             EUR          57894                 BE            50   \n",
+       "1             USD         147000                 US             0   \n",
+       "2             USD          60900                 US             0   \n",
+       "3             USD         303500                 US             0   \n",
+       "4             USD         159800                 US             0   \n",
+       "\n",
+       "  company_location company_size  \n",
+       "0               BE            L  \n",
+       "1               US            M  \n",
+       "2               US            M  \n",
+       "3               US            M  \n",
+       "4               US            M  "
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datadf.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -15,7 +574,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.0"
   }
  },
